Fix width error on mobile and tablets
Fix error caused by "margin: 5px" (left-right margin) when width = 100%..

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 					<h1>Про мене</h1>
 					<h4> Я народився, побачив світло в кінці тунелю, а потім зростав у чарівному місті Тернополі. На разі я є студентом Тернопільського національного університету ім. І. Пулюя. Навчаюся на ІV курсі за спеціальністю "Комп'ютерні науки". Отримую задоволення від процесу навчання та результатів застосування своїх знань і навичок. У вільний від навчання час займаюсь грою на гітарі, подорожую, програмую, гуляю, сплю, читаю цікаві книги та статті. Полюбляю вечірні пробіжки у місцевому парку та купаня в джерельній воді. Зачарований морем та горами. Люблю розглядати в простому складне і навпаки.</h4>
 			
-					<img  src="img/aboutf.png" alt="Мої фото" style="width:100%; height:auto;">
+					<img  src="img/aboutf.png" alt="Мої фото" style="width:100%; height:auto; margin: 5px 0px">
 			
 					
 			
